--- a/security.html
+++ b/security.html
@@ -49,7 +49,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -154,7 +154,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://macstadiuma1.applytojob.com/apply/9iywoLY8fN/Associate-Network-Security-Engineer'>Associate Network Security Engineer - MacStadium - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://macstadiuma1.applytojob.com/apply/9iywoLY8fN/Associate-Network-Security-Engineer'>Associate Network Security Engineer - MacStadium - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -182,7 +182,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=onOCafwH&__jvst=Tenable+Employee&__jvsd=sWudthwS&__jvsc=Twitter&bid=nX0xSKwB'>Tenable Careers - Security Sales Engineer - Federal</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=onOCafwH&__jvst=Tenable+Employee&__jvsd=sWudthwS&__jvsc=Twitter&bid=nX0xSKwB'>Tenable Careers - Security Sales Engineer - Federal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -254,7 +254,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Apply online for the job of Security Engineer at Viva Wallet.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://klook.applytojob.com/apply/2OaByd96fT/Security-Analyst-SG'>Security Analyst (SG) - Klook - Career Page</a></h5> 
+<h5><a href='http://klook.applytojob.com/apply/2OaByd96fT/Security-Analyst-SG'>Security Analyst (SG) - Klook - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -310,7 +310,7 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4347519002'>Job Application for Concierge Security Analyst - 1 at Arctic Wolf Networks</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4347519002'>Job Application for Concierge Security Analyst - 1 at Arctic Wolf Networks</a></h5> 
 <p><span class="badge badge-light">Kitchener-Waterloo Canada Kitchener-Waterloo Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -326,11 +326,11 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/5d3jds6rn5a3dp6y17g365zs4h'>State of WI - DHS - Security Patch/Software Engineer 2 (16117) | Sundial Software Career Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/sundial/job/5d3jds6rn5a3dp6y17g365zs4h'>State of WI - DHS - Security Patch/Software Engineer 2 (16117) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://careers-texascapitalbank.icims.com/jobs/4077/corporate-security-fraud-analyst-i/job'>Corporate Security Fraud Analyst I</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-texascapitalbank.icims.com/jobs/4077/corporate-security-fraud-analyst-i/job'>Corporate Security Fraud Analyst I</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Texas Capital Bank is now hiring a Corporate Security Fraud Analyst I in 
 Richardson Operations Center, Texas. Review all of the job details and apply 
@@ -414,7 +414,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/94410120-ffae-4e18-9f6b-32dbcb22bc5a'>Mattermost - Product Security Engineer (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/mattermost/94410120-ffae-4e18-9f6b-32dbcb22bc5a'>Mattermost - Product Security Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -438,7 +438,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">Maryland, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-draper.icims.com/jobs/3952/systems-security-engineer/job'>Systems Security Engineer in ... - Draper - Engineering Possibilities</a></h5> 
+<h5><a href='https://careers-draper.icims.com/jobs/3952/systems-security-engineer/job'>Systems Security Engineer in ... - Draper - Engineering Possibilities</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Reston, VA is now hiring a Systems Security Engineer in Reston, Virginia. 
 Review all of the job details and apply today!</p>
