--- a/frontend.html
+++ b/frontend.html
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/uuZmRcu6Ak/Front-End-Software-Engineer-II-Seattle-WA'>Front End Software Engineer II (Seattle, WA) - MedBridge - Career Page</a></h5> 
+<h5><a href='http://medbridge.applytojob.com/apply/uuZmRcu6Ak/Front-End-Software-Engineer-II-Seattle-WA'>Front End Software Engineer II (Seattle, WA) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -181,11 +181,11 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1788975'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
+<h5><a href='https://boards.greenhouse.io/reddit/jobs/1788975'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1789004'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1789004'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -247,7 +247,7 @@ the?...</p>
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692241690-it-developer-front-end-'>Ubisoft IT Developer ( Front-end) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692241690-it-developer-front-end-'>Ubisoft IT Developer ( Front-end) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -291,7 +291,7 @@ the?...</p>
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4357247002'>Job Application for Sr. Frontend Engineer  at Globality, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4357247002'>Job Application for Sr. Frontend Engineer  at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -363,7 +363,7 @@ the?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://durstexpress.join.com/jobs/257826-team-lead-frontend-development'>Job @ Durstexpress (Berlin): Team Lead Frontend De... | JOIN</a></h5> 
+<h5><a href='https://durstexpress.join.com/jobs/257826-team-lead-frontend-development'>Job @ Durstexpress (Berlin): Team Lead Frontend De... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -371,7 +371,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zenabis.applytojob.com/apply/R9BI9hDQ48/Front-End-Developer'>Front End Developer - Zenabis - Career Page</a></h5> 
+<h5><a href='http://zenabis.applytojob.com/apply/R9BI9hDQ48/Front-End-Developer'>Front End Developer - Zenabis - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -386,7 +386,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692090312-frontend-developer'>Netcentric Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692090312-frontend-developer'>Netcentric Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -422,7 +422,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://moduscreate.applytojob.com/apply/yWn6rktAg5/Junior-Frontend-Engineer-ReactJS'>Junior Front-end Engineer (ReactJS) - Modus Create, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://moduscreate.applytojob.com/apply/yWn6rktAg5/Junior-Frontend-Engineer-ReactJS'>Junior Front-end Engineer (ReactJS) - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
